fixed lyric top spacing

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -299,7 +299,9 @@ div.items>div {
 
 .insideAcrdn {
   margin-top: 10px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
   border-radius: 10px;
   width: 100%;
 }
